@@ -1,8 +1,18 @@
 package com.github.javanoo6.formatter;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.io.PrintWriter;
+import java.net.ConnectException;
+import java.net.InetAddress;
+import java.net.InetSocketAddress;
+import java.net.Socket;
+import java.net.SocketTimeoutException;
 import java.net.URISyntaxException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
@@ -14,14 +24,13 @@ import java.util.zip.ZipInputStream;
 
 
 /**
- * Locates (or extracts) the IntelliJ engine, then spawns a subprocess that runs
- * IdeaFormatterStarter via IntelliJ's application startup machinery.
- * <p>
- * The engine ZIP (produced by minimal-jar-builder) already contains the plugin at:
- * custom-plugins/ideaformatter/lib/formatter-plugin.jar
- * custom-plugins/ideaformatter/META-INF/plugin.xml
- * No runtime plugin setup is needed — just point idea.plugins.path at custom-plugins/.
- * <p>
+ * Locates (or extracts) the IntelliJ engine, then either connects to a running
+ * daemon or spawns a subprocess that runs IdeaFormatterStarter.
+ *
+ * Daemon mode (default): on first call the daemon JVM is started in the background
+ * and its port written to $TMPDIR/intellij-formatter-daemon-{cacheKey}.port.
+ * Subsequent calls connect directly, skipping the ~3-5s IntelliJ startup cost.
+ *
  * Engine resolution order:
  * 1. --engine-dir flag
  * 2. ./engine/ directory next to the running JAR
@@ -37,15 +46,159 @@ public class FormatterLauncher {
     private final boolean format;
     private final boolean optimizeImports;
     private final boolean rearrange;
+    private final boolean noDaemon;
 
     public FormatterLauncher(Path engineDirOverride, Path editorConfigPath,
-                             boolean format, boolean optimizeImports, boolean rearrange) {
+                             boolean format, boolean optimizeImports, boolean rearrange,
+                             boolean noDaemon) {
         this.engineDirOverride = engineDirOverride;
         this.editorConfigPath = editorConfigPath;
         this.format = format;
         this.optimizeImports = optimizeImports;
         this.rearrange = rearrange;
+        this.noDaemon = noDaemon;
     }
+
+    // -------------------------------------------------------------------------
+    // Public entry points
+    // -------------------------------------------------------------------------
+
+    public int launch(List<Path> files) throws Exception {
+        Path engine = resolveEngine();
+        Path pluginsRoot = engine.resolve("custom-plugins");
+
+        if (!noDaemon) {
+            Path portFile = daemonPortFile();
+            Integer result = trySendToDaemon(portFile, files);
+            if (result != null) return result;
+
+            startDaemon(engine, pluginsRoot, portFile);
+            waitForPortFile(portFile);
+            result = trySendToDaemon(portFile, files);
+            if (result != null) return result;
+
+            System.err.println("[formatter] WARNING: daemon unreachable, falling back to one-shot");
+        }
+
+        List<String> cmd = buildCommand(engine, pluginsRoot, files);
+        ProcessBuilder pb = new ProcessBuilder(cmd);
+        pb.inheritIO();
+        return pb.start().waitFor();
+    }
+
+    public int stopDaemon() throws Exception {
+        Path portFile = daemonPortFile();
+        if (!Files.exists(portFile)) {
+            System.out.println("[formatter] No daemon running (port file absent).");
+            return 0;
+        }
+        int port;
+        try {
+            port = Integer.parseInt(Files.readString(portFile).trim());
+        } catch (Exception e) {
+            deleteQuietly(portFile);
+            System.out.println("[formatter] No daemon running (stale port file cleaned up).");
+            return 0;
+        }
+        try (Socket s = new Socket()) {
+            s.connect(new InetSocketAddress(InetAddress.getLoopbackAddress(), port), 2000);
+            s.setSoTimeout(5_000);
+            PrintWriter out = new PrintWriter(
+                    new OutputStreamWriter(s.getOutputStream(), StandardCharsets.UTF_8), true);
+            BufferedReader in = new BufferedReader(
+                    new InputStreamReader(s.getInputStream(), StandardCharsets.UTF_8));
+            out.println("--stop");
+            String response = in.readLine();
+            System.out.println("[formatter] Daemon stopped: " + response);
+        } catch (ConnectException e) {
+            System.out.println("[formatter] Daemon already gone (stale port file cleaned up).");
+        }
+        deleteQuietly(portFile);
+        return 0;
+    }
+
+    // -------------------------------------------------------------------------
+    // Daemon helpers
+    // -------------------------------------------------------------------------
+
+    private Path daemonPortFile() {
+        return Path.of(System.getProperty("java.io.tmpdir"),
+                "intellij-formatter-daemon-" + cacheKey() + ".port");
+    }
+
+    private Integer trySendToDaemon(Path portFile, List<Path> files) {
+        if (!Files.exists(portFile)) return null;
+        int port;
+        try {
+            port = Integer.parseInt(Files.readString(portFile).trim());
+        } catch (Exception e) {
+            return null;
+        }
+        try (Socket s = new Socket()) {
+            s.connect(new InetSocketAddress(InetAddress.getLoopbackAddress(), port), 2000);
+            s.setSoTimeout(60_000);
+            PrintWriter out = new PrintWriter(
+                    new OutputStreamWriter(s.getOutputStream(), StandardCharsets.UTF_8), true);
+            BufferedReader in = new BufferedReader(
+                    new InputStreamReader(s.getInputStream(), StandardCharsets.UTF_8));
+            out.println(buildRequestLine(files));
+            String response = in.readLine();
+            if (response == null) return null;
+            if (response.startsWith("OK")) return 0;
+            if (response.startsWith("ERR")) {
+                System.err.println("[formatter] " + response.substring(4));
+                return 1;
+            }
+            return null;
+        } catch (ConnectException | SocketTimeoutException e) {
+            // Daemon died without cleaning up its port file
+            deleteQuietly(portFile);
+            return null;
+        } catch (Exception e) {
+            deleteQuietly(portFile);
+            return null;
+        }
+    }
+
+    private String buildRequestLine(List<Path> files) {
+        List<String> parts = new ArrayList<>();
+        if (format) parts.add("--format");
+        if (optimizeImports) parts.add("--optimize-imports");
+        if (rearrange) parts.add("--rearrange");
+        if (editorConfigPath != null) {
+            parts.add("--editorconfig");
+            parts.add(editorConfigPath.toAbsolutePath().toString());
+        }
+        for (Path f : files) parts.add(f.toAbsolutePath().toString());
+        return String.join(" ", parts);
+    }
+
+    private void startDaemon(Path engine, Path pluginsRoot, Path portFile) throws Exception {
+        List<String> cmd = buildDaemonCommand(engine, pluginsRoot, portFile);
+        Path logFile = Path.of(System.getProperty("java.io.tmpdir"),
+                "intellij-formatter-daemon-" + cacheKey() + ".log");
+        ProcessBuilder pb = new ProcessBuilder(cmd);
+        pb.redirectOutput(logFile.toFile());
+        pb.redirectError(logFile.toFile());
+        pb.start(); // fire and forget — no waitFor()
+        System.out.println("[formatter] Starting daemon (log: " + logFile + ")");
+    }
+
+    private void waitForPortFile(Path portFile) throws Exception {
+        long deadline = System.currentTimeMillis() + 30_000;
+        while (System.currentTimeMillis() < deadline) {
+            if (Files.exists(portFile)) return;
+            Thread.sleep(100);
+        }
+        Path logFile = Path.of(System.getProperty("java.io.tmpdir"),
+                "intellij-formatter-daemon-" + cacheKey() + ".log");
+        throw new RuntimeException(
+                "Daemon did not start within 30 seconds. Check log: " + logFile);
+    }
+
+    // -------------------------------------------------------------------------
+    // Engine resolution
+    // -------------------------------------------------------------------------
 
     private static void collectJars(Path dir, List<String> target) throws Exception {
         if (!Files.isDirectory(dir)) return;
@@ -55,10 +208,6 @@ public class FormatterLauncher {
                     .forEach(target::add);
         }
     }
-
-    // -------------------------------------------------------------------------
-    // Engine resolution
-    // -------------------------------------------------------------------------
 
     private static void deleteQuietly(Path path) {
         try {
@@ -72,27 +221,10 @@ public class FormatterLauncher {
         }
     }
 
-    public int launch(List<Path> files) throws Exception {
-        Path engine = resolveEngine();
-        // The plugin lives inside the engine ZIP at custom-plugins/ — no setup needed
-        Path pluginsRoot = engine.resolve("custom-plugins");
-        List<String> cmd = buildCommand(engine, pluginsRoot, files);
-
-        ProcessBuilder pb = new ProcessBuilder(cmd);
-        pb.inheritIO();
-        return pb.start().waitFor();
-    }
-
-    // -------------------------------------------------------------------------
-    // Subprocess command construction
-    // -------------------------------------------------------------------------
-
     private Path resolveEngine() throws Exception {
-        if (engineDirOverride!=null && Files.isDirectory(engineDirOverride)) {
+        if (engineDirOverride != null && Files.isDirectory(engineDirOverride)) {
             return engineDirOverride.toAbsolutePath();
         }
-
-        // Look for ./engine/ sibling to our JAR
         try {
             Path jarPath = Path.of(FormatterLauncher.class.getProtectionDomain()
                     .getCodeSource().getLocation().toURI());
@@ -102,27 +234,22 @@ public class FormatterLauncher {
             }
         } catch (URISyntaxException ignored) {
         }
-
         return extractBundledEngine();
     }
 
     private Path extractBundledEngine() throws Exception {
         Path cacheDir = Path.of(System.getProperty("java.io.tmpdir"), cacheKey());
-
-        // Sentinel file signals a complete prior extraction
         if (Files.isDirectory(cacheDir) && Files.exists(cacheDir.resolve(".extracted"))) {
             return cacheDir;
         }
-
         System.out.println("[formatter] First run: extracting IntelliJ engine to " + cacheDir + " ...");
         Files.createDirectories(cacheDir);
-
         try (InputStream raw = FormatterLauncher.class.getResourceAsStream(ENGINE_RESOURCE)) {
             Objects.requireNonNull(raw, "Bundled engine ZIP not found at classpath:" + ENGINE_RESOURCE
                     + ". Run `mvn package -pl minimal-jar-builder` first.");
             try (ZipInputStream zis = new ZipInputStream(raw)) {
                 ZipEntry entry;
-                while ((entry = zis.getNextEntry())!=null) {
+                while ((entry = zis.getNextEntry()) != null) {
                     Path dest = cacheDir.resolve(entry.getName()).normalize();
                     if (!dest.startsWith(cacheDir)) {
                         throw new SecurityException("Zip-slip detected in: " + entry.getName());
@@ -137,35 +264,16 @@ public class FormatterLauncher {
                 }
             }
         }
-
         Files.writeString(cacheDir.resolve(".extracted"), "ok");
         System.out.println("[formatter] Engine ready at " + cacheDir);
         return cacheDir;
     }
 
-    private List<String> buildCommand(Path engine, Path pluginsRoot, List<Path> files) throws Exception {
-        // Collect only the platform classpath from lib/**.
-        // Bundled plugins under plugins/** should be loaded by IntelliJ's plugin manager,
-        // not preloaded onto the application classpath.
-        List<String> cp = new ArrayList<>();
-        collectJars(engine.resolve("lib"), cp);
+    // -------------------------------------------------------------------------
+    // Subprocess command construction
+    // -------------------------------------------------------------------------
 
-        // Temp directories for IntelliJ config and system state (isolated per run)
-        Path configDir = Files.createTempDirectory("idea-config-");
-        Path systemDir = Files.createTempDirectory("idea-system-");
-
-        // Clean up config/system dirs on JVM exit
-        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-            deleteQuietly(configDir);
-            deleteQuietly(systemDir);
-        }));
-
-        List<String> cmd = new ArrayList<>();
-
-        // Use the same JVM that launched us
-        cmd.add(ProcessHandle.current().info().command().orElse("java"));
-
-        // Required --add-opens for IntelliJ on JDK 17+
+    private void addJvmFlags(List<String> cmd, Path engine, Path configDir, Path systemDir, Path pluginsRoot) {
         cmd.add("--add-opens=java.base/java.io=ALL-UNNAMED");
         cmd.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
         cmd.add("--add-opens=java.base/java.lang.ref=ALL-UNNAMED");
@@ -210,7 +318,6 @@ public class FormatterLauncher {
         cmd.add("--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED");
         cmd.add("--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED");
 
-        // IntelliJ system properties
         cmd.add("-Djava.system.class.loader=com.intellij.util.lang.PathClassLoader");
         cmd.add("-Djava.awt.headless=true");
         cmd.add("-Didea.vendor.name=JetBrains");
@@ -232,28 +339,60 @@ public class FormatterLauncher {
         cmd.add("-Daether.connector.resumeDownloads=false");
         cmd.add("-Dcompose.swing.render.on.graphics=true");
         cmd.add("-Xmx512m");
+    }
 
-        // Classpath
+    private List<String> buildCommand(Path engine, Path pluginsRoot, List<Path> files) throws Exception {
+        List<String> cp = new ArrayList<>();
+        collectJars(engine.resolve("lib"), cp);
+
+        Path configDir = Files.createTempDirectory("idea-config-");
+        Path systemDir = Files.createTempDirectory("idea-system-");
+
+        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+            deleteQuietly(configDir);
+            deleteQuietly(systemDir);
+        }));
+
+        List<String> cmd = new ArrayList<>();
+        cmd.add(ProcessHandle.current().info().command().orElse("java"));
+        addJvmFlags(cmd, engine, configDir, systemDir, pluginsRoot);
         cmd.add("-cp");
         cmd.add(String.join(File.pathSeparator, cp));
-
-        // IntelliJ main class — routes to our registered "ideaformatter" appStarter
         cmd.add("com.intellij.idea.Main");
         cmd.add("ideaformatter");
 
-        // Our custom flags
         if (format) cmd.add("--format");
         if (optimizeImports) cmd.add("--optimize-imports");
         if (rearrange) cmd.add("--rearrange");
-        if (editorConfigPath!=null) {
+        if (editorConfigPath != null) {
             cmd.add("--editorconfig");
             cmd.add(editorConfigPath.toAbsolutePath().toString());
         }
+        for (Path f : files) cmd.add(f.toAbsolutePath().toString());
 
-        // Files to process
-        for (Path f : files) {
-            cmd.add(f.toAbsolutePath().toString());
-        }
+        return cmd;
+    }
+
+    private List<String> buildDaemonCommand(Path engine, Path pluginsRoot, Path portFile) throws Exception {
+        List<String> cp = new ArrayList<>();
+        collectJars(engine.resolve("lib"), cp);
+
+        // Stable dirs (not random temp) so the CLI's shutdown hook never deletes them
+        String key = cacheKey();
+        Path configDir = Path.of(System.getProperty("java.io.tmpdir"), "intellij-formatter-config-" + key);
+        Path systemDir = Path.of(System.getProperty("java.io.tmpdir"), "intellij-formatter-system-" + key);
+        Files.createDirectories(configDir);
+        Files.createDirectories(systemDir);
+
+        List<String> cmd = new ArrayList<>();
+        cmd.add(ProcessHandle.current().info().command().orElse("java"));
+        addJvmFlags(cmd, engine, configDir, systemDir, pluginsRoot);
+        cmd.add("-cp");
+        cmd.add(String.join(File.pathSeparator, cp));
+        cmd.add("com.intellij.idea.Main");
+        cmd.add("ideaformatter");
+        cmd.add("--daemon");
+        cmd.add(portFile.toAbsolutePath().toString());
 
         return cmd;
     }
